Add Some UI. Clean Up a bit

--- a/Day_6_Typing_Simulator/makefile
+++ b/Day_6_Typing_Simulator/makefile
@@ -1,8 +1,8 @@
 # Project Makefile
 #
 
-all:		*.h *.cpp
-		g++ -o main -std=c++11 -Wall -g *.cpp
+all:		main.h main.cpp
+		g++ -o main -std=c++11 -Wall -g main.cpp
 
 clean:
 		@remove *.o main 2>/dev/null || true
