--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
   "files.autoSaveDelay": 100,
   "files.autoSave": "afterDelay",
   "editor.formatOnSave": true,
-  "editor.autoClosingBrackets": "never"
+  "editor.autoClosingBrackets": "always",
+  "liveServer.settings.port": 5502
 } // {
 //   "window.zoomLevel": 1,
 //   "editor.fontSize": 32,
